# core

./: .clang-format  .codacy.yml  .gitignore  CMakeLists.txt  README.md  core.code-workspace  core.natvis  core.vscode.code-workspace  coverage.cmake  coverage.runsettings  coverage_fixed.cmake  coverage_unix.cmake  coverage_windows.cmake  sanitizer.cmake
src/: CMakeLists.txt  debugger.cpp  precompiled.h
src/Hash/: Crc32.cpp
src/OSLinux/: LinuxDebugger.cpp
src/containers/: hashmap.cpp  hashset.cpp
src/core/: Assert.h  Atomics.h  CString.h  Char.h  Compilation.h  Debugger.h  Defines.h  Hash.h  Math.h  Memory.h  Minimal.h  Slice.h  String.h  Types.h  Uuid.h  assert.h  atomics.h  builtin.h  character.h  compilation.h  compiler_defines.h  cstring.h  debugger.h  defines.h  hash.h  math.h  memory.h  minimal.h  slice.h  string.h  tag_in_place.h  tag_init.h  types.h  uuid.h
src/debugger/: debugger_browser.cpp  debugger_linux.cpp
src/hash/: crc32.cpp
src/i128/: i128_portable.cpp
src/os_linux/: debugger.cpp
src/string/: cstring.cpp  cstring_view.cpp
test/: CMakeLists.txt  aligned_buffer.cpp  aligned_heap_allocator.cpp  allocation.cpp  atomics.cpp  char.cpp  character.cpp  code_coverage.runsettings  compilation.cpp  coverage.runsettings  cstring.cpp  debugger.cpp  hash.cpp  heap_allocator.cpp  i128.cpp  main.cpp  math.cpp  precompiled.h  random_access_iterator.cpp  slice.cpp  types.cpp  u128.cpp  uuid.cpp
test/allocator/: aligned_heap_allocator.cpp  allocation.cpp  heap_allocator.cpp
test/array/: add.cpp  add_no_construct.cpp  add_to_ref.cpp  allocators.h  array_add.cpp  array_add_no_construct.cpp  array_add_to_ref.cpp  array_assign_copy.cpp  array_assignment.cpp  array_clear.cpp  array_clear_shrink.cpp  array_constructors.cpp  array_contains.cpp  array_copy_assign.cpp  array_copy_assign_operator.cpp  array_copy_constructors.cpp  array_destructor.cpp  array_emplace_at.cpp  array_emplace_at_to_ref.cpp  array_emplace_back.cpp  array_emplace_back_to_ref.cpp  array_find.cpp  array_iteration.cpp  array_misc.cpp  array_move_assign.cpp  array_move_assign_operator.cpp  array_move_constructors.cpp  array_remove_at.cpp  array_reserve.cpp  array_resize.cpp  array_search.cpp  array_shrink_to_fit.cpp  array_swap.cpp  assignment.cpp  clear.cpp  comparison.cpp  constructors.cpp  copy_assign.cpp  destructor.cpp  emplace_at.cpp  (+12 more)
test/atomic/: atomic_add.cpp  atomic_assign.cpp  atomic_cast.cpp  atomic_compare_exchange.cpp  atomic_constructor.cpp  atomic_decrement.cpp  atomic_exchange.cpp  atomic_increment.cpp  atomic_load.cpp  atomic_store.cpp  atomic_sub.cpp
test/atomics/: atomics_compare_and_set.cpp  atomics_compare_and_swap.cpp  atomics_exchange.cpp  atomics_fetch_add_sub.cpp  atomics_load.cpp  atomics_store.cpp  atomics_thread_fence.cpp
test/bits/: bits.cpp  bits_leading_zero.cpp  bits_reverse.cpp  bits_rotate.cpp  bits_trailing_zero.cpp
test/compressed_pair/: compressed_pair_assignments.cpp  compressed_pair_comparison.cpp  compressed_pair_constructors.cpp  compressed_pair_misc.cpp  compressed_pair_swap.cpp
test/compressed_tuple/: compressed_tuple_assignments.cpp  compressed_tuple_comparison.cpp  compressed_tuple_constructors.cpp  compressed_tuple_element.cpp  compressed_tuple_hash.cpp  compressed_tuple_misc.cpp  compressed_tuple_size.cpp  compressed_tuple_swap.cpp
test/cstring_view/: constructors.cpp  cstring_view.cpp  misc.cpp
test/hash/: city_hash.cpp  crc32.cpp  hash.cpp  hash_32.cpp  hash_64.cpp
test/hashmap/: hashmap_add.cpp  hashmap_clear.cpp  hashmap_clear_shrink.cpp  hashmap_comparison.cpp  hashmap_constructors.cpp  hashmap_contains.cpp  hashmap_copy_assign_operator.cpp  hashmap_copy_constructors.cpp  hashmap_destructeur.cpp  hashmap_find.cpp  hashmap_indexed_operator.cpp  hashmap_insert.cpp  hashmap_iterator.cpp  hashmap_misc.cpp  hashmap_move_assign_operator.cpp  hashmap_move_constructors.cpp  hashmap_rehash.cpp  hashmap_remove.cpp  hashmap_reserve.cpp  hashmap_shrink_to_fit.cpp  hashmap_swap.cpp
test/hashset/: hashset_add.cpp  hashset_clear.cpp  hashset_clear_shrink.cpp  hashset_comparison.cpp  hashset_constructors.cpp  hashset_contains.cpp  hashset_copy_assign_operator.cpp  hashset_copy_constructors.cpp  hashset_destructeur.cpp  hashset_find.cpp  hashset_insert.cpp  hashset_iterator.cpp  hashset_misc.cpp  hashset_move_assign_operator.cpp  hashset_move_constructors.cpp  hashset_rehash.cpp  hashset_remove.cpp  hashset_reserve.cpp  hashset_shrink_to_fit.cpp  hashset_swap.cpp
test/i128/: i128_assign.cpp  i128_cast.cpp  i128_comparisons.cpp  i128_constructors.cpp  i128_misc.cpp  i128_operations.cpp
test/iterators/: random_access_iterator.cpp
test/memory/: alignment.cpp  allocation.cpp  compare.cpp  construct.cpp  copy_assign.cpp  copy_construct.cpp  copy_move.cpp  default_construct.cpp  destroy.cpp  fast_move_or_copy_construct_array_then_destroy.cpp  memory_allocation.cpp  memory_compare.cpp  memory_construct.cpp  memory_copy_assign.cpp  memory_copy_construct.cpp  memory_copy_move.cpp  memory_destroy.cpp  memory_fast_move_or_copy_construct_array_then_destroy.cpp  memory_move_or_copy_assign.cpp  memory_move_or_copy_construct_then_destroy.cpp  memory_move_or_copy_construct_then_destroy_backward.cpp  memory_rotate.cpp  memory_set_zero.cpp  move_or_copy_assign.cpp  move_or_copy_construct_then_destroy.cpp  move_or_copy_construct_then_destroy_backward.cpp  reverse.cpp  rotate.cpp  set_zero.cpp
test/misc/: allocator_watcher.h  allocators.h  array_allocators.h  default_constructible_type.h  for_each_type.h  for_each_value.h  leak_guard.h  non_bitwise_copy_assignable_type.h  non_bitwise_copy_constructible_type.h  non_bitwise_move_assignable_type.h  non_bitwise_move_constructible_type.h  non_bitwise_type.h  non_default_constructible_type.h  set_bool_to_true_when_destroyed.h  test.cpp  test.h
test/optional/: assignment.cpp  comparison.cpp  constructors.cpp  emplace.cpp  misc.cpp  optional_assignment.cpp  optional_constructors.cpp  optional_emplace.cpp  optional_misc.cpp  optional_swap.cpp  swap.cpp
test/pair/: assignments.cpp  comparison.cpp  constructors.cpp  (+7 more)
(+957 files in other folders)
